learning about git workflow

--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>This is me!</h1>
-    <h2>From my Local System Windows</h2>
+    <h2>From my Local System Windows!</h2>
     <img src="../images/me-385x648.jpg" alt="A picture of me, Jacque S.">
 </body>
 </html>
