added meta tag and fixed sentence

--- a/w4/index.html
+++ b/w4/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Jacque S.">
     <title>Week 4 - Implement Three HTML Elements</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -44,7 +45,7 @@
                 <h3>Emphasis</h3>
                 <code>
                     &lt;p&gt;<br>
-                    &nbsp;&nbsp;&nbsp;Having breaks throughout your work day is one <span>&lt;em&gt;important&lt;/em&gt;</span> of many steps that can improve work productivity. <br>
+                    &nbsp;&nbsp;&nbsp;Having breaks throughout your work day is one of many <span>&lt;em&gt;important&lt;/em&gt;</span> steps that can improve work productivity. <br>
                     &lt;/p&gt;
                 </code>
                 <p>
