fix element in block

--- a/w4/index.html
+++ b/w4/index.html
@@ -33,7 +33,7 @@
                     <span>
                         &lt;dl&gt;<br>
                         &nbsp;&nbsp;&nbsp;&lt;dt&gt;item&lt;/dt&gt;<br>
-                        &nbsp;&nbsp;&nbsp;&lt;dt&gt;description&lt;/dt&gt;<br>
+                        &nbsp;&nbsp;&nbsp;&lt;dd&gt;description&lt;/dd&gt;<br>
                         &lt;/dl&gt;
                     </span>
                 </code>
