--- a/w4/contact.html
+++ b/w4/contact.html
@@ -27,26 +27,26 @@
             </li>
         </ul>
       </nav>
-      <h1>Welcome to my Website</h1>
+      <h1>Contact Me</h1>
     </header>
     <main>
-      <p>This webpage demonstrates my first effort in creating websites.</p>
       <section>
-        <h2>My Fav Fruits</h2>
-        <ul>
-          <li>Strawberries</li>
-          <li>Strawberries</li>
-          <li>Strawberries</li>
-        </ul>
-        <img src="../images/strawberries-bg.svg" alt="Three pink-red strawberries grouped together.">
-      </section>
-      <section>
-        <h2>Steps to Make a Sandwich</h2>
-        <ol>
-          <li>Get bread slices</li>
-          <li>Add fav fillings</li>
-          <li>Put the slices together</li>
-        </ol>
+        <h2>Fill out the form to contact me.</h2>
+        <form action="">
+          <label for="inputName">Name</label>
+          <input type="text" id="inputName" />
+          <label for="inputEmail">Email</label>
+          <input type="email" id="inputEmail" />
+          <label for="inputMessage">Message</label>
+          <textarea
+            name="message"
+            id="inpuptMessage"
+            cols="30"
+            rows="10"
+          ></textarea
+          ><br />
+          <button type="submit">Submit</button>
+        </form>
       </section>
     </main>
     <footer>
