--- a/p0/index.html
+++ b/p0/index.html
@@ -125,7 +125,6 @@
             </div>
           </div>
         </header>
-  
         <div class="nav-scroller py-1 mb-3 border-bottom border-secondary px-2">
           <nav class="nav nav-underline justify-content-between">
             <a
@@ -137,13 +136,10 @@
               >Posts</a
             >
             <a class="nav-item nav-link text-reset" href="#"
-              >Newsletter</a
+              >Our Team</a
             >
-            <a class="nav-item nav-link text-reset" href="#">NASA</a>
-            <a class="nav-item nav-link text-reset" href="#">Link</a>
-            <a class="nav-item nav-link text-reset" href="#">Link</a>
-            <a class="nav-item nav-link text-reset" href="#">Link</a>
-            <a class="nav-item nav-link text-reset" href="#">Link</a>
+            <a class="nav-item nav-link text-reset" href="#">Events</a>
+            <a class="nav-item nav-link text-reset" href="#">Contact Us</a>
           </nav>
         </div>
       </div>
