--- a/p0/posts.html
+++ b/p0/posts.html
@@ -111,14 +111,19 @@
 
   <div class="nav-scroller py-1 mb-3 border-bottom">
     <nav class="nav nav-underline justify-content-between">
-      <a class="nav-item nav-link text-reset" href="index.html">Home</a>
-      <a class="nav-item nav-link active text-reset" href="posts.html">Posts</a>
-      <a class="nav-item nav-link text-reset" href="#">Newsletter</a>
-      <a class="nav-item nav-link text-reset" href="#">NASA</a>
-      <a class="nav-item nav-link text-reset" href="#">Link</a>
-      <a class="nav-item nav-link text-reset" href="#">Link</a>
-      <a class="nav-item nav-link text-reset" href="#">Link</a>
-      <a class="nav-item nav-link text-reset" href="#">Link</a>
+      <a
+        class="nav-item nav-link text-reset"
+        href="index.html"
+        >Home</a
+      >
+      <a class="nav-item nav-link text-reset active" href="posts.html"
+        >Posts</a
+      >
+      <a class="nav-item nav-link text-reset" href="#"
+        >Our Team</a
+      >
+      <a class="nav-item nav-link text-reset" href="#">Events</a>
+      <a class="nav-item nav-link text-reset" href="#">Contact Us</a>
     </nav>
   </div>
 </div>
