switch from link to text for now

--- a/p0/site-map.html
+++ b/p0/site-map.html
@@ -66,13 +66,16 @@
                   <a href="our-team.html">Our Team</a>
                   <ul>
                     <li>
-                      <a href="">Writer One Bio</a>
+                      <!-- <a href="">Writer One Bio</a> -->
+                      Writer One Bio
                     </li>
                     <li>
-                      <a href="">Writer Two Bio</a>
+                      <!-- <a href="">Writer Two Bio</a> -->
+                      Writer Two Bio
                     </li>
                     <li>
-                      <a href="">Marketing Manager Bio</a>
+                      <!-- <a href="">Marketing Manager Bio</a> -->
+                      Marketing Manager Bio
                     </li>
                   </ul>
                 </li>
