add lazy loading to all imgs

--- a/p0/blog-post-one.html
+++ b/p0/blog-post-one.html
@@ -160,7 +160,7 @@
           </section>
           <div class="col-md-4 float-start pe-3 py-3">
             <img src="assets/img/mountain-night-sky-resize-min.jpg
-            " alt="Mountain night sky" class="img-fluid">
+            " alt="Mountain night sky" class="img-fluid" loading="lazy">
           </div>
           <section>
             <h3>Exploring Exoplanet Atmospheres</h3>
