--- a/p0/blog-post-two.html
+++ b/p0/blog-post-two.html
@@ -168,7 +168,7 @@
           </section>
           <div class="col-md-4 float-end pe-3 py-3">
             <img src="assets/img/starry-night-resize-min.jpg
-            " alt="Starry night sky" class="img-fluid">
+            " alt="Starry night sky" class="img-fluid" loading="lazy">
           </div>
           <section>
             <h3>The Search Continues</h3>
