--- a/p0/images.html
+++ b/p0/images.html
@@ -139,12 +139,12 @@
                 <div class="col-md-6">
                     <h3 class="mb-0">Resized</h3>
                     <small class="pt-0 fst-italic">680 x 477</small>
-                    <img src="assets/img/galaxy-resize.jpg" class="img-fluid border border-light"alt="Astronaut in space, resized image">
+                    <img src="assets/img/galaxy-resize.jpg" class="img-fluid border border-light"alt="Astronaut in space, resized image" loading="lazy">
                 </div>
                 <div class="col-md-6">
                     <h3 class="mb-0">Compressed Resized</h3>
                     <small class="pt-0 fst-italic">680 x 477</small>
-                    <img src="assets/img/galaxy-resize-min.jpg" class="img-fluid border border-light"alt="Astronaut in space, image compressed">
+                    <img src="assets/img/galaxy-resize-min.jpg" class="img-fluid border border-light"alt="Astronaut in space, image compressed" loading="lazy">
                 </div>
             </div>
         </section>
@@ -155,12 +155,12 @@
                 <div class="col-md-6">
                     <h3 class="mb-0">Resized</h3>
                     <small class="pt-0 fst-italic">720 x 1009</small>
-                    <img src="assets/img/starry-night-resize.jpg" class="img-fluid border border-light"alt="Starry night, resized image">
+                    <img src="assets/img/starry-night-resize.jpg" class="img-fluid border border-light"alt="Starry night, resized image" loading="lazy">
                 </div>
                 <div class="col-md-6">
                     <h3 class="mb-0">Compressed Resized</h3>
                     <small class="pt-0 fst-italic">720 x 1009</small>
-                    <img src="assets/img/starry-night-resize-min.jpg" class="img-fluid border border-light"alt="Starry night, image compressed">
+                    <img src="assets/img/starry-night-resize-min.jpg" class="img-fluid border border-light"alt="Starry night, image compressed" loading="lazy">
                 </div>
             </div>
         </section>
@@ -171,12 +171,12 @@
                 <div class="col-md-6">
                     <h3 class="mb-0">Resized</h3>
                     <small class="pt-0 fst-italic">660 x 449</small>
-                    <img src="assets/img/astronaut-resize.jpg" class="img-fluid border border-light"alt="Astronaut in space, resized image">
+                    <img src="assets/img/astronaut-resize.jpg" class="img-fluid border border-light"alt="Astronaut in space, resized image" loading="lazy">
                 </div>
                 <div class="col-md-6">
                     <h3 class="mb-0">Compressed Resized</h3>
                     <small class="pt-0 fst-italic">660 x 449</small>
-                    <img src="assets/img/astronaut-resize-min.jpg" class="img-fluid border border-light"alt="Astronaut in space, image compressed">
+                    <img src="assets/img/astronaut-resize-min.jpg" class="img-fluid border border-light"alt="Astronaut in space, image compressed" loading="lazy">
                 </div>
             </div>
         </section>
@@ -187,12 +187,12 @@
                 <div class="col-md-6">
                     <h3 class="mb-0">Resized</h3>
                     <small class="pt-0 fst-italic">720 x 1080</small>
-                    <img src="assets/img/mountain-night-sky-resize.jpg" class="img-fluid border border-light"alt="Mountain night sky, resized image">
+                    <img src="assets/img/mountain-night-sky-resize.jpg" class="img-fluid border border-light"alt="Mountain night sky, resized image" loading="lazy">
                 </div>
                 <div class="col-md-6">
                     <h3 class="mb-0">Compressed Resized</h3>
                     <small class="pt-0 fst-italic">720 x 1080</small>
-                    <img src="assets/img/mountain-night-sky-resize-min.jpg" class="img-fluid border border-light"alt="Mountain night sky, image compressed">
+                    <img src="assets/img/mountain-night-sky-resize-min.jpg" class="img-fluid border border-light"alt="Mountain night sky, image compressed" loading="lazy">
                 </div>
             </div>
         </section>
@@ -203,12 +203,12 @@
                 <div class="col-md-6">
                     <h3 class="mb-0">Resized</h3>
                     <small class="pt-0 fst-italic">630 x 383</small>
-                    <img src="assets/img/nebula-resize.jpg" class="img-fluid border border-light"alt="the nebula, resized image">
+                    <img src="assets/img/nebula-resize.jpg" class="img-fluid border border-light"alt="the nebula, resized image" loading="lazy">
                 </div>
                 <div class="col-md-6">
                     <h3 class="mb-0">Compressed Resized</h3>
                     <small class="pt-0 fst-italic">630 x 383</small>
-                    <img src="assets/img/nebula-resize-min.jpg" class="img-fluid border border-light"alt="the nebula, image compressed">
+                    <img src="assets/img/nebula-resize-min.jpg" class="img-fluid border border-light"alt="the nebula, image compressed" loading="lazy">
                 </div>
             </div>
         </section>
