--- a/p0/our-team.html
+++ b/p0/our-team.html
@@ -159,7 +159,7 @@
                 <div class="col-md-3">
                     <div class="card rounded-top-5 border-0">
                         <img src="assets/img/writer-two.jpg" class="rounded-top-5 img-fluid"
-                            alt="Profile picture of Alex Vega" width="306" height="auto">
+                            alt="Profile picture of Alex Vega" width="306" height="auto" loading="lazy">
                         <div class="card-header">
                             <h3>Alex Vega</h3>
                             <em>Writer</em>
@@ -172,7 +172,7 @@
                 <div class="col-md-3">
                     <div class="card rounded-top-5 border-0">
                         <img src="assets/img/writer-one.jpg" alt="Profile picture of Jordan Orion"
-                            class="rounded-top-5 img-fluid" width="306" height="auto">
+                            class="rounded-top-5 img-fluid" width="306" height="auto" loading="lazy">
                         <div class="card-header">
                             <h3>Jordan Orion</h3>
                             <em>Writer</em>
@@ -185,7 +185,7 @@
                 <div class="col-md-3">
                     <div class="card rounded-top-5 border-0">
                         <img src="assets/img/marketing-manager.jpg" alt="Profile picture of Casey Andromeda"
-                            class="rounded-top-5 img-fluid" width="306" height="auto">
+                            class="rounded-top-5 img-fluid" width="306" height="auto" loading="lazy">
                         <div class="card-header">
 
                             <h3>Casey Andromeda</h3>
