make changes and corrections

--- a/p0/events.html
+++ b/p0/events.html
@@ -180,9 +180,7 @@
           <article class="blog-post">
             <h2 class="display-5 mb-1">Supermoon Spectacle</h2>
             <p class="blog-post-meta">
-              <strong>Event Date:</strong> March 30,
-              <a href="event-archives.html">2024</a> by
-              <a href="writer-bio-one.html">Jordan Orion</a>
+              <strong>Event Date:</strong> March 30, 2024
             </p>
 
             <p>
@@ -196,8 +194,7 @@
           <article class="blog-post">
             <h2 class="display-5 mb-1">Perseid Meteor Shower Viewing Party</h2>
             <p class="blog-post-meta">
-              <strong>Event Date:</strong> August 12-13th,
-              <a href="event-archives.html">2024</a>
+              <strong>Event Date:</strong> August 12-13th, 2024
             </p>
 
             <p>
@@ -210,8 +207,7 @@
           <article class="blog-post">
             <h2 class="display-5 mb-1">Lunar Eclipse Watch</h2>
             <p class="blog-post-meta">
-              <strong>Event Date:</strong> September 18th,
-              <a href="event-archives.html">2024</a>
+              <strong>Event Date:</strong> September 18th, 2024
             </p>
 
             <p>
@@ -224,8 +220,7 @@
           <article class="blog-post">
             <h2 class="display-5 mb-1">Venus and Jupiter Conjunction</h2>
             <p class="blog-post-meta">
-              <strong>Event Date:</strong> October 1st,
-              <a href="event-archives.html">2024</a>
+              <strong>Event Date:</strong> October 1st, 2024
             </p>
 
             <p>
