--- a/p0/blog-post-one.html
+++ b/p0/blog-post-one.html
@@ -171,7 +171,7 @@
           <article class="blog-post">
             <header>
               <h2 class="display-5 mb-1">Webb's Cosmic Insights</h2>
-              <p><strong>Date:</strong> February 25th, 2024</p>
+              <p><strong>Date:</strong> March 02, 2024</p>
               <p>
                 <strong>Author:</strong>
                 <a href="writer-bio-two.html">Alex Vega</a>
