--- a/p0/our-team.html
+++ b/p0/our-team.html
@@ -221,7 +221,7 @@
               />
               <div class="card-header">
                 <h3>Jordan Orion</h3>
-                <em>Writer</em>
+                <em>Lead Writer</em>
               </div>
               <div class="card-body d-flex justify-content-center">
                 <a href="writer-bio-one.html" class="btn"
