--- a/p0/posts.html
+++ b/p0/posts.html
@@ -183,8 +183,8 @@
           <article class="blog-post">
             <h2 class="display-5 mb-1">Webb's Cosmic Insights</h2>
             <p class="blog-post-meta">
-              March 02, <a href="archives.html">2024</a> by
-              <a href="writer-bio-one.html">Jordan Orion</a>
+              March 02, 2024 by
+              <a href="writer-bio-one.html">Alex Vega</a>
             </p>
 
             <p>
@@ -197,8 +197,8 @@
           <article class="blog-post">
             <h2 class="display-5 mb-1">Mars: Ancient Life Clues?</h2>
             <p class="blog-post-meta">
-              February 15, <a href="archives.html">2024</a> by
-              <a href="writer-bio-two.html">Alex Vega</a>
+              February 15, 2024 by
+              <a href="writer-bio-two.html">Jordan Orion</a>
             </p>
 
             <p>
@@ -211,7 +211,7 @@
           <article class="blog-post">
             <h2 class="display-5 mb-1">Voyager Beyond the Edge</h2>
             <p class="blog-post-meta">
-              January 25, <a href="archives.html">2024</a> by
+              January 25, 2024 by
               <a href="writer-bio-two.html">Alex Vega</a>
             </p>
 
@@ -227,7 +227,7 @@
               The Aurora Phenomenon: Earth's Light Show
             </h2>
             <p class="blog-post-meta">
-              January 05, <a href="archives.html">2024</a> by
+              January 05, 2024 by
               <a href="writer-bio-one.html">Jordan Orion</a>
             </p>
 
