updated style of card

--- a/p0/our-team.html
+++ b/p0/our-team.html
@@ -187,14 +187,13 @@
           contribute to making our site your premier destination for space news
           and discoveries.
         </p>
-        <div class="row justify-content-around mt-5" id="team-cards">
+        <div class="row justify-content-around mt-5 p-3 p-md-0" id="team-cards">
           <div class="col-md-3">
             <div class="card rounded-top-5 border-0">
               <img
                 src="assets/img/writer-two.jpg"
                 class="rounded-top-5 img-fluid"
                 alt="Profile picture of Alex Vega"
-                width="306"
                 height="auto"
                 loading="lazy"
               />
@@ -209,13 +208,12 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 mt-3">
             <div class="card rounded-top-5 border-0">
               <img
                 src="assets/img/writer-one.jpg"
                 alt="Profile picture of Jordan Orion"
                 class="rounded-top-5 img-fluid"
-                width="306"
                 height="auto"
                 loading="lazy"
               />
@@ -230,13 +228,12 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 mt-3">
             <div class="card rounded-top-5 border-0">
               <img
                 src="assets/img/marketing-manager.jpg"
                 alt="Profile picture of Casey Andromeda"
                 class="rounded-top-5 img-fluid"
-                width="306"
                 height="auto"
                 loading="lazy"
               />
