--- a/p0/index.html
+++ b/p0/index.html
@@ -173,10 +173,10 @@
                 Welcome to Starry Nights, your gateway to the cosmos. Created by
                 a dedicated team of space enthusiasts, our blog brings the
                 wonders of the universe right to your screen. With engaging
-                content crafted by our writers, <a href="">Alex Vega</a> and
-                <a href="">Jordan Orion</a>, and brought to life through the
+                content crafted by our writers, <a href="writer-bio-two.html">Alex Vega</a> and
+                <a href="writer-bio-one.html">Jordan Orion</a>, and brought to life through the
                 strategic vision of our social/digital marketing manager,
-                <a href="">Casey Andromeda</a>, we aim to inspire, educate, and
+                <a href="manager-bio.html">Casey Andromeda</a>, we aim to inspire, educate, and
                 connect with fellow astronomy lovers.
               </p>
               <p>
