--- a/p0/posts.html
+++ b/p0/posts.html
@@ -184,7 +184,7 @@
             <h2 class="display-5 mb-1">Webb's Cosmic Insights</h2>
             <p class="blog-post-meta">
               March 02, 2024 by
-              <a href="writer-bio-one.html">Alex Vega</a>
+              <a href="writer-bio-two.html">Alex Vega</a>
             </p>
 
             <p>
@@ -198,7 +198,7 @@
             <h2 class="display-5 mb-1">Mars: Ancient Life Clues?</h2>
             <p class="blog-post-meta">
               February 15, 2024 by
-              <a href="writer-bio-two.html">Jordan Orion</a>
+              <a href="writer-bio-one.html">Jordan Orion</a>
             </p>
 
             <p>
